ncc/testsuite/negative/cyclic.n
class Bug854
{
  public Foo[T](x : T) : void where T : T { // E: cyclic constraint on type variable T
        _ = x.Foo()
  }
}


class A : B {} // E: type definition for `A' is cyclic
class B : A {}

class C : C.I { // E: type definition for `C' is cyclic
  interface I {
  }
}


